--- a/po/es.po
+++ b/po/es.po
@@ -1,54 +1,54 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Spanish translations for com.github.calo001.fondo package.
+# Copyright (C) 2018 THE com.github.calo001.fondo'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.calo001.fondo package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Automatically generated, 2018.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.calo001.fondo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-09 22:07-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2018-08-09 22:07-0500\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/controllers/AppController.vala:109
 msgid "Exit"
-msgstr ""
+msgstr "Salir"
 
 #: src/controllers/AppController.vala:157
 msgid "Photos from Unsplash"
-msgstr ""
+msgstr "Fotos de Unsplash"
 
 #: src/widgets/HeaderBar.vala:48
 msgid "✨  See more"
-msgstr ""
+msgstr "✨  Ver mas"
 
 #: src/widgets/HeaderBar.vala:58
 msgid "🌞  Light background"
-msgstr ""
+msgstr "🌞  Fondo claro"
 
 #: src/widgets/HeaderBar.vala:59
 msgid "🌛  Dark background"
-msgstr ""
+msgstr "🌛  Fondo oscuro"
 
 #: src/utils/Wallpaper.vala:133
 msgid "Wallpaper ready!"
-msgstr ""
+msgstr "¡Fondo de pantalla listo!"
 
 #: src/utils/Wallpaper.vala:134
 msgid "Your new wallpaper is ready!"
-msgstr ""
+msgstr "¡Tu nuevo fondo de pantalla está listo!"
 
 #: src/views/CardPhotoView.vala:59
 msgid "🌎  An amazing place, In the world"
-msgstr ""
+msgstr "🌎  Un lugar asombroso, en el mundo"
 
 #: src/views/PreviewWindow.vala:84
 msgid "Loading ..."
-msgstr ""
+msgstr "Cargando ..."
